Add router and filters

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,12 @@
 
     <title>BFF TODO</title>
 
-    <!--<link rel="stylesheet" href="../node_modules/todomvc-common/base.css">-->
+    <link rel="stylesheet" href="../node_modules/todomvc-common/base.css">
     <link rel="stylesheet" href="../node_modules/todomvc-app-css/index.css">
-    <script data-main="main" src="../node_modules/requirejs/require.js"></script>
   </head>
   <body>
-    <!--<script src="../node_modules/todomvc-common/base.js"></script>-->
+    <script src="../node_modules/todomvc-common/base.js"></script>
+    <script src="../node_modules/director/build/director.js"></script>
+    <script data-main="main" src="../node_modules/requirejs/require.js"></script>
   </body>
 </html>
