--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>BFF TODO</title>
+		<title>BFF • TodoMVC</title>
 
 		<link rel="stylesheet" href="../node_modules/todomvc-common/base.css">
 		<link rel="stylesheet" href="../node_modules/todomvc-app-css/index.css">
